codegen/tests/ui/main/duplicate-main-fn.rs
#[cyndra_codegen::main]
async fn main() -> CyndraRocket {}
